##
##  Regina - A Normal Surface Theory Calculator
##  Makefile Template
##
##  Process this file with automake in the top-level directory
##  to produce Makefile.in.
##

SUBDIRS = sigs

examplesdir = $(pkgdatadir)/examples

examples_DATA = README.txt \
  closed-or-census.rga closed-nor-census.rga \
  knot-link-census.rga sample-misc.rga snappea-census.rga \
  tree.py tree.session \
  triangulation.py triangulation.session

EXTRA_DIST = $(examples_DATA)

