##
##  Regina - A Normal Surface Theory Calculator
##  Makefile Template
##
##  Process this file with automake in the top-level directory
##  to produce Makefile.in.
##

KDE_OPTIONS=noautodist

SUBDIRS = povray

iconsdir = $(pkgdatadir)/icons

icons_DATA = README.txt \
  regina-lo.xpm \
  regina.gif regina.png regina.xpm \
  reginalarge.jpg \
  reginatiny-lo.xpm \
  reginatiny.gif reginatiny.png reginatiny.xpm

EXTRA_DIST = $(icons_DATA)

