##
##  Regina - A Normal Surface Theory Calculator
##  Makefile Template
##
##  Process this file with automake in the top-level directory
##  to produce Makefile.in.
##

KDE_OPTIONS=noautodist

SUBDIRS = povray

iconsdir = $(pkgdatadir)/icons

icons_DATA = README.txt regina.png regina.xpm title.png reginatiny.png

EXTRA_DIST = $(icons_DATA)

